--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "sequelize": "^6.19.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
